--- a/index.html
+++ b/index.html
@@ -1,5 +1,14 @@
 <html>
 <body>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-90338862-12"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-90338862-12');
+    </script>
     <script type="text/javascript">
         window.location.href = '/paraview-docs/nightly/cxx';
     </script>
